// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Transfer > should render correctly 1`] = `
"<div lazy="false" class="xy-transfer css-dev-only-do-not-override-1p3hq3p">
  <div class="xy-transfer-list">
    <div class="xy-transfer-list-header"><label class="xy-checkbox-wrapper xy-checkbox-wrapper-checked xy-transfer-list-checkbox css-dev-only-do-not-override-1p3hq3p"><span class="xy-checkbox css-dev-only-do-not-override-1p3hq3p xy-checkbox-checked"><input type="checkbox" class="xy-checkbox-input" checked=""><span class="xy-checkbox-inner"></span></span>
        <!---->
      </label><span role="img" aria-label="down" class="anticon anticon-down xy-dropdown-trigger xy-transfer-list-header-dropdown" tabindex="-1"><svg focusable="false" data-icon="down" width="1em" height="1em" fill="currentColor" aria-hidden="true" viewBox="64 64 896 896"><path d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"></path></svg><!----></span>
      <!----><span class="xy-transfer-list-header-selected"><span>1/2 items</span><span class="xy-transfer-list-header-title"></span></span>
    </div>
    <div class="xy-transfer-list-body">
      <!---->
      <ul class="xy-transfer-list-content">
        <li class="xy-transfer-list-content-item"><label class="xy-checkbox-wrapper xy-checkbox-wrapper-checked xy-transfer-list-checkbox css-dev-only-do-not-override-1p3hq3p"><span class="xy-checkbox css-dev-only-do-not-override-1p3hq3p xy-checkbox-checked"><input type="checkbox" class="xy-checkbox-input" checked=""><span class="xy-checkbox-inner"></span></span>
            <!---->
          </label><span class="xy-transfer-list-content-item-text"><!----></span></li>
        <li class="xy-transfer-list-content-item xy-transfer-list-content-item-disabled"><label class="xy-checkbox-wrapper xy-checkbox-wrapper-disabled xy-transfer-list-checkbox css-dev-only-do-not-override-1p3hq3p"><span class="xy-checkbox css-dev-only-do-not-override-1p3hq3p xy-checkbox-disabled"><input type="checkbox" disabled="" class="xy-checkbox-input"><span class="xy-checkbox-inner"></span></span>
            <!---->
          </label><span class="xy-transfer-list-content-item-text"><!----></span></li>
      </ul>
      <!---->
    </div>
    <!---->
  </div>
  <div class="xy-transfer-operation"><button class="css-dev-only-do-not-override-1p3hq3p xy-btn xy-btn-primary xy-btn-sm xy-btn-icon-only" type="button"><span role="img" aria-label="right" class="anticon anticon-right"><svg focusable="false" data-icon="right" width="1em" height="1em" fill="currentColor" aria-hidden="true" viewBox="64 64 896 896"><path d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"></path></svg><!----></span></button><button disabled="" class="css-dev-only-do-not-override-1p3hq3p xy-btn xy-btn-primary xy-btn-sm xy-btn-icon-only" type="button"><span role="img" aria-label="left" class="anticon anticon-left"><svg focusable="false" data-icon="left" width="1em" height="1em" fill="currentColor" aria-hidden="true" viewBox="64 64 896 896"><path d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"></path></svg><!----></span></button></div>
  <div class="xy-transfer-list">
    <div class="xy-transfer-list-header"><label class="xy-checkbox-wrapper xy-transfer-list-checkbox css-dev-only-do-not-override-1p3hq3p"><span class="xy-checkbox css-dev-only-do-not-override-1p3hq3p"><input type="checkbox" class="xy-checkbox-input"><span class="xy-checkbox-inner"></span></span>
        <!---->
      </label><span role="img" aria-label="down" class="anticon anticon-down xy-dropdown-trigger xy-transfer-list-header-dropdown" tabindex="-1"><svg focusable="false" data-icon="down" width="1em" height="1em" fill="currentColor" aria-hidden="true" viewBox="64 64 896 896"><path d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"></path></svg><!----></span>
      <!----><span class="xy-transfer-list-header-selected"><span>1 item</span><span class="xy-transfer-list-header-title"></span></span>
    </div>
    <div class="xy-transfer-list-body">
      <!---->
      <ul class="xy-transfer-list-content">
        <li class="xy-transfer-list-content-item"><label class="xy-checkbox-wrapper xy-transfer-list-checkbox css-dev-only-do-not-override-1p3hq3p"><span class="xy-checkbox css-dev-only-do-not-override-1p3hq3p"><input type="checkbox" class="xy-checkbox-input"><span class="xy-checkbox-inner"></span></span>
            <!---->
          </label><span class="xy-transfer-list-content-item-text"><!----></span></li>
      </ul>
      <!---->
    </div>
    <!---->
  </div>
</div>"
`;

exports[`Transfer > should show sorted targetkey 1`] = `
"<div lazy="false" class="xy-transfer css-dev-only-do-not-override-1p3hq3p">
  <div class="xy-transfer-list">
    <div class="xy-transfer-list-header"><label class="xy-checkbox-wrapper xy-transfer-list-checkbox css-dev-only-do-not-override-1p3hq3p"><span class="xy-checkbox css-dev-only-do-not-override-1p3hq3p"><input type="checkbox" class="xy-checkbox-input"><span class="xy-checkbox-inner"></span></span>
        <!---->
      </label><span role="img" aria-label="down" class="anticon anticon-down xy-dropdown-trigger xy-transfer-list-header-dropdown" tabindex="-1"><svg focusable="false" data-icon="down" width="1em" height="1em" fill="currentColor" aria-hidden="true" viewBox="64 64 896 896"><path d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"></path></svg><!----></span>
      <!----><span class="xy-transfer-list-header-selected"><span>1 item</span><span class="xy-transfer-list-header-title"></span></span>
    </div>
    <div class="xy-transfer-list-body">
      <!---->
      <ul class="xy-transfer-list-content">
        <li class="xy-transfer-list-content-item" title="a"><label class="xy-checkbox-wrapper xy-transfer-list-checkbox css-dev-only-do-not-override-1p3hq3p"><span class="xy-checkbox css-dev-only-do-not-override-1p3hq3p"><input type="checkbox" class="xy-checkbox-input"><span class="xy-checkbox-inner"></span></span>
            <!---->
          </label><span class="xy-transfer-list-content-item-text">a</span></li>
      </ul>
      <!---->
    </div>
    <!---->
  </div>
  <div class="xy-transfer-operation"><button disabled="" class="css-dev-only-do-not-override-1p3hq3p xy-btn xy-btn-primary xy-btn-sm xy-btn-icon-only" type="button"><span role="img" aria-label="right" class="anticon anticon-right"><svg focusable="false" data-icon="right" width="1em" height="1em" fill="currentColor" aria-hidden="true" viewBox="64 64 896 896"><path d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"></path></svg><!----></span></button><button disabled="" class="css-dev-only-do-not-override-1p3hq3p xy-btn xy-btn-primary xy-btn-sm xy-btn-icon-only" type="button"><span role="img" aria-label="left" class="anticon anticon-left"><svg focusable="false" data-icon="left" width="1em" height="1em" fill="currentColor" aria-hidden="true" viewBox="64 64 896 896"><path d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"></path></svg><!----></span></button></div>
  <div class="xy-transfer-list">
    <div class="xy-transfer-list-header"><label class="xy-checkbox-wrapper xy-transfer-list-checkbox css-dev-only-do-not-override-1p3hq3p"><span class="xy-checkbox css-dev-only-do-not-override-1p3hq3p"><input type="checkbox" class="xy-checkbox-input"><span class="xy-checkbox-inner"></span></span>
        <!---->
      </label><span role="img" aria-label="down" class="anticon anticon-down xy-dropdown-trigger xy-transfer-list-header-dropdown" tabindex="-1"><svg focusable="false" data-icon="down" width="1em" height="1em" fill="currentColor" aria-hidden="true" viewBox="64 64 896 896"><path d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"></path></svg><!----></span>
      <!----><span class="xy-transfer-list-header-selected"><span>2 items</span><span class="xy-transfer-list-header-title"></span></span>
    </div>
    <div class="xy-transfer-list-body">
      <!---->
      <ul class="xy-transfer-list-content">
        <li class="xy-transfer-list-content-item" title="c"><label class="xy-checkbox-wrapper xy-transfer-list-checkbox css-dev-only-do-not-override-1p3hq3p"><span class="xy-checkbox css-dev-only-do-not-override-1p3hq3p"><input type="checkbox" class="xy-checkbox-input"><span class="xy-checkbox-inner"></span></span>
            <!---->
          </label><span class="xy-transfer-list-content-item-text">c</span></li>
        <li class="xy-transfer-list-content-item" title="b"><label class="xy-checkbox-wrapper xy-transfer-list-checkbox css-dev-only-do-not-override-1p3hq3p"><span class="xy-checkbox css-dev-only-do-not-override-1p3hq3p"><input type="checkbox" class="xy-checkbox-input"><span class="xy-checkbox-inner"></span></span>
            <!---->
          </label><span class="xy-transfer-list-content-item-text">b</span></li>
      </ul>
      <!---->
    </div>
    <!---->
  </div>
</div>"
`;
